<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.vitovalov.livekalc.CalculatorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/output_ll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/gdl_h_0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/output_tv"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            style="@style/WidgetBasic"
            android:background="#ccc"
            android:layout_weight="1"
            android:padding="@dimen/output_padding"
            android:lines="1"
            android:autoSizeTextType="uniform"
            android:text="@{viewmodel.output}"
            android:textSize="@dimen/output_text_size"
            tools:ignore="SpUsage"
            tools:text="0" />

        <TextView
            android:layout_marginLeft="@dimen/result_margin_left"
            android:id="@+id/output_result_tv"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:lines="1"
            android:layout_weight=".8"
            style="@style/WidgetBasic"
            android:background="#ccc"
            android:autoSizeTextType="uniform"
            android:padding="@dimen/output_padding"
            android:text="@{viewmodel.outputResult}"
            android:textSize="@dimen/output_text_size"
            tools:ignore="SpUsage"
            tools:text="0" />

        </LinearLayout>

        <Button
            android:id="@+id/ac_btn"
            style="@style/WidgetBasic.CalcButton"
            android:onClick="@{() -> viewmodel.acPressed()}"
            android:text="@string/calc_btn_ac"
            app:layout_constraintBottom_toTopOf="@id/gdl_h_1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/gdl_v_2"
            app:layout_constraintTop_toBottomOf="@id/output_ll" />

        <Button
            android:id="@+id/convert_btn"
            style="@style/WidgetBasic.CalcButton"
            android:onClick="@{() -> viewmodel.convertPressed()}"
            android:text="@{viewmodel.convert}"
            android:textSize="@dimen/convert_unit_size"
            app:layout_constraintBottom_toTopOf="@id/gdl_h_1"
            app:layout_constraintLeft_toRightOf="@id/gdl_v_2"
            app:layout_constraintRight_toLeftOf="@id/gdl_v_3"
            app:layout_constraintTop_toBottomOf="@id/output_ll" />

        <Button
            android:id="@+id/division_btn"
            style="@style/WidgetBasic.CalcButton"
            android:onClick="@{() -> viewmodel.divisionPressed()}"
            android:text="@string/calc_btn_div"
            app:layout_constraintBottom_toTopOf="@id/gdl_h_1"
            app:layout_constraintLeft_toRightOf="@id/gdl_v_3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/output_ll" />

        <Button
            android:id="@+id/multiply_btn"
            style="@style/WidgetBasic.CalcButton"
            android:onClick="@{() -> viewmodel.multiplyPressed()}"
            android:text="@string/calc_btn_multiply"
            app:layout_constraintBottom_toTopOf="@id/gdl_h_2"
            app:layout_constraintLeft_toRightOf="@id/gdl_v_3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gdl_h_1" />

        <Button
            android:id="@+id/substract_btn"
            style="@style/WidgetBasic.CalcButton"
            android:onClick="@{() -> viewmodel.substractPressed()}"
            android:text="@string/calc_btn_subs"
            app:layout_constraintBottom_toTopOf="@id/gdl_h_3"
            app:layout_constraintLeft_toRightOf="@id/gdl_v_3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gdl_h_2" />

        <Button
            android:id="@+id/add_btn"
            style="@style/WidgetBasic.CalcButton"
            android:onClick="@{() -> viewmodel.addPressed()}"
            android:text="@string/calc_btn_add"
            app:layout_constraintBottom_toTopOf="@id/gdl_h_4"
            app:layout_constraintLeft_toRightOf="@id/gdl_v_3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gdl_h_3" />

        <Button
            android:id="@+id/zero_btn"
            style="@style/WidgetBasic.CalcButton"
            android:onClick="@{() -> viewmodel.zeroPressed()}"
            android:text="@string/calc_btn_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/gdl_v_2"
            app:layout_constraintTop_toBottomOf="@id/gdl_h_4" />

        <Button
            android:id="@+id/equal_btn"
            style="@style/WidgetBasic.CalcButton"
            android:onClick="@{() -> viewmodel.equalPressed()}"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/gdl_v_3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gdl_h_4" />

        <Button
            android:id="@+id/comma_btn"
            style="@style/WidgetBasic.CalcButton"
            android:onClick="@{() -> viewmodel.commaPressed()}"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/gdl_v_2"
            app:layout_constraintRight_toLeftOf="@id/gdl_v_3"
            app:layout_constraintTop_toBottomOf="@id/gdl_h_4" />

        <Button
            android:id="@+id/four_btn"
            style="@style/WidgetBasic.CalcButton"
            android:onClick="@{() -> viewmodel.fourPressed()}"
            android:text="@string/calc_btn_4"
            app:layout_constraintBottom_toTopOf="@id/gdl_h_3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/gdl_v_1"
            app:layout_constraintTop_toBottomOf="@id/gdl_h_2" />

        <Button
            android:id="@+id/five_btn"
            style="@style/WidgetBasic.CalcButton"
            android:onClick="@{() -> viewmodel.fivePressed()}"
            android:text="@string/calc_btn_5"
            app:layout_constraintBottom_toTopOf="@id/gdl_h_3"
            app:layout_constraintLeft_toRightOf="@id/gdl_v_1"
            app:layout_constraintRight_toLeftOf="@id/gdl_v_2"
            app:layout_constraintTop_toBottomOf="@id/gdl_h_2" />

        <Button
            android:id="@+id/six_btn"
            style="@style/WidgetBasic.CalcButton"
            android:onClick="@{() -> viewmodel.sixPressed()}"
            android:text="@string/calc_btn_6"
            app:layout_constraintBottom_toTopOf="@id/gdl_h_3"
            app:layout_constraintLeft_toRightOf="@id/gdl_v_2"
            app:layout_constraintRight_toLeftOf="@id/gdl_v_3"
            app:layout_constraintTop_toBottomOf="@id/gdl_h_2" />

        <Button
            android:id="@+id/seven_btn"
            style="@style/WidgetBasic.CalcButton"
            android:onClick="@{() -> viewmodel.sevenPressed()}"
            android:text="@string/calc_btn_7"
            app:layout_constraintBottom_toTopOf="@id/gdl_h_2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/gdl_v_1"
            app:layout_constraintTop_toBottomOf="@id/ac_btn" />

        <Button
            android:id="@+id/eight_btn"
            style="@style/WidgetBasic.CalcButton"
            android:onClick="@{() -> viewmodel.eightPressed()}"
            android:text="@string/calc_btn_8"
            app:layout_constraintBottom_toTopOf="@id/gdl_h_2"
            app:layout_constraintLeft_toRightOf="@id/gdl_v_1"
            app:layout_constraintRight_toLeftOf="@id/gdl_v_2"
            app:layout_constraintTop_toBottomOf="@id/ac_btn" />

        <Button
            android:id="@+id/nine_btn"
            style="@style/WidgetBasic.CalcButton"
            android:onClick="@{() -> viewmodel.ninePressed()}"
            android:text="@string/calc_btn_9"
            app:layout_constraintBottom_toTopOf="@id/gdl_h_2"
            app:layout_constraintLeft_toRightOf="@id/gdl_v_2"
            app:layout_constraintRight_toLeftOf="@id/gdl_v_3"
            app:layout_constraintTop_toBottomOf="@id/ac_btn" />

        <Button
            android:id="@+id/one_btn"
            style="@style/WidgetBasic.CalcButton"
            android:onClick="@{() -> viewmodel.onePressed()}"
            android:text="@string/calc_btn_1"
            app:layout_constraintBottom_toTopOf="@id/zero_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/gdl_v_1"
            app:layout_constraintTop_toBottomOf="@id/gdl_h_3" />

        <Button
            android:id="@+id/two_btn"
            style="@style/WidgetBasic.CalcButton"
            android:onClick="@{() -> viewmodel.twoPressed()}"
            android:text="@string/calc_btn_2"
            app:layout_constraintBottom_toTopOf="@id/zero_btn"
            app:layout_constraintLeft_toRightOf="@id/gdl_v_1"
            app:layout_constraintRight_toLeftOf="@id/gdl_v_2"
            app:layout_constraintTop_toBottomOf="@id/gdl_h_3" />

        <Button
            android:id="@+id/three_btn"
            style="@style/WidgetBasic.CalcButton"
            android:onClick="@{() -> viewmodel.threePressed()}"
            android:text="@string/calc_btn_3"
            app:layout_constraintBottom_toTopOf="@id/zero_btn"
            app:layout_constraintLeft_toRightOf="@id/gdl_v_2"
            app:layout_constraintRight_toLeftOf="@id/gdl_v_3"
            app:layout_constraintTop_toBottomOf="@id/gdl_h_3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdl_v_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdl_v_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdl_v_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.72" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdl_h_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.17" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdl_h_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.34" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdl_h_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.52" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdl_h_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.68" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdl_h_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.86" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
